workshop04/istio-fortune/fortuneappv2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fortuneappv2
spec:
  selector:
    matchLabels:
      app: fortuneappv2
  template:
    metadata:
      labels:
        app: fortuneappv2
    spec:
      containers:
      - name: fortuneappv2
        image: zytean/myfortuneapp:v2.0.1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: fortuneappv2-svc
spec:
  selector:
    app: fortuneappv2
  ports:
  - port: 80
    targetPort: 3000
