workshop04/istio-fortune/fortune-gw.yaml
apiVersion: networking.istio.io/v1alpha3

kind: Gateway

metadata:
   name: fortune-ingress

spec:
   selector:
      istio: ingressgateway
   servers:
   - hosts:
      - "fortune.157.230.194.69.nip.io"
     port:
        number: 80
        protocol: HTTP
        name: HTTP

#fortuneapp-svc   ClusterIP   10.245.14.164   <none>        80/TCP    108m
#http://fortune.157.230.194.69.nip.io/v1
